añadido demo viajes

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div>
         </div>
 
-        <div class="item">
+        <!-- <div class="item">
             <img src="images/novias.jpg" alt="">
             <p class="descripcion">Proyecto Vestidos de Novia y Fiesta</p>
             <div class="botones">
@@ -218,7 +218,7 @@
                     <button class="btn b">Demo</button>
                 </a>
             </div>
-        </div>
+        </div> -->
 
         <div class="item">
             <img src="images/viajes.jpg" alt="">
@@ -227,7 +227,7 @@
                 <a href="https://github.com/almudenadomenech/PROYECTO_VIAJES" target="_blank">
                     <button class="btn">Github</button>
                 </a>
-                <a href="#" target="_blank">
+                <a href="demo-videoViajes.html" target="_blank">
                     <button class="btn b">Demo</button>
                 </a>
             </div>
